Fix styling bug around list collapsing.

--- a/styles/components/grouped-ingredient-list.styl
+++ b/styles/components/grouped-ingredient-list.styl
@@ -27,9 +27,6 @@
     background: linear-gradient(to right, #4a4a4a 12px, #444 12px, #404040, #444 calc(100% - 12px), #4a4a4a calc(100% - 12px))
     transition: height $transition-duration
 
-    .collapsed
-      transition: height $transition-duration
-
   .list-item
     margin: 0 0 1px 0
     padding: 0 15px
